# bilgisayarGrafikleri

hafta03/: CMakeLists.txt
hafta03/src/: kutuphane.cpp  main.cpp
hafta04 - OpenGL Giris/: CMakeLists.txt
hafta04 - OpenGL Giris/include/: FileLoader.hpp
hafta04 - OpenGL Giris/shaders/: fragment.glsl  vertex.glsl
hafta04 - OpenGL Giris/src/: FileLoader.cpp  main.cpp
hafta05 - Uniform Degiskenler/: imgui.ini
hafta05 - Uniform Degiskenler/include/: ShaderProgram.hpp
hafta05 - Uniform Degiskenler/shaders/: vertex.glsl
hafta05 - Uniform Degiskenler/src/: ShaderProgram.cpp  main.cpp
hafta06 - 01 2B Donusum/: CMakeLists.txt
hafta06 - 01 2B Donusum/shaders/: vertex.glsl
hafta06 - 01 2B Donusum/src/: main.cpp
hafta06 - 02 Daire Cizimi/include/: FileLoader.hpp  kutuphane.hpp
hafta06 - 02 Daire Cizimi/shaders/: fragment.glsl  vertex.glsl
hafta06 - 02 Daire Cizimi/src/: main.cpp
hafta06 - 03 Renk Tamponu/include/: VertexTypes.hpp
hafta06 - 03 Renk Tamponu/shaders/: fragment.glsl  vertex.glsl
hafta06 - 03 Renk Tamponu/src/: FileLoader.cpp  main.cpp
hafta06 - 04 Index Buffer/include/: GuiControl.hpp  VertexTypes.hpp
hafta06 - 04 Index Buffer/shaders/: fragment.glsl
hafta06 - 04 Index Buffer/src/: ShaderProgram.cpp  main.cpp
hafta07- 01 Kaplama/: CMakeLists.txt
hafta07- 01 Kaplama/include/: VertexTypes.hpp
hafta07- 01 Kaplama/shaders/: vertex.glsl
hafta07- 01 Kaplama/src/: GuiControl.cpp  main.cpp
hafta07- 02 2D Izgara/: CMakeLists.txt
hafta07- 02 2D Izgara/include/: UtilityFuncitons.hpp  VertexTypes.hpp
hafta07- 02 2D Izgara/shaders/: gridVsShader.glsl
hafta07- 02 2D Izgara/src/: ShaderProgram.cpp  main.cpp
hafta07- 03 2D Model/: CMakeLists.txt
hafta07- 03 2D Model/include/: Model2D.hpp
hafta09- 03 2D Model/: CMakeLists.txt  imgui.ini
hafta11- 01 3D Donusum/: CMakeLists.txt
hafta11- 01 3D Donusum/include/: MeshManager.hpp  ShaderProgram.hpp  VertexTypes.hpp
hafta11- 01 3D Donusum/shaders/: fragment.glsl
hafta11- 01 3D Donusum/src/: MeshManager.cpp  glad.c
hafta11- 02 Kamera Sinifi/: CMakeLists.txt
hafta11- 02 Kamera Sinifi/include/: Camera.hpp  Mesh3D.hpp  MeshManager.hpp  VertexTypes.hpp
hafta11- 02 Kamera Sinifi/shaders/: colorFragment.glsl
hafta11- 02 Kamera Sinifi/src/: Camera.cpp  GuiControl.cpp  Mesh3D.cpp  MeshManager.cpp  ShaderProgram.cpp  UtilityFuncitons.cpp  main.cpp
hafta13- 02 pixel isik/: CMakeLists.txt
(+67 files in other folders)
